--- a/styles.css
+++ b/styles.css
@@ -523,6 +523,15 @@ progress::-webkit-progress-value {
   background-size: 50px 30px, 100% 100%, 100% 100%;
 } */
 
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+
+
 @media only screen and (max-width: 800px) {
   .recipe {
     width: 100%;
